масонри: пересчет колонок на masonry small

--- a/web/gallery.html
+++ b/web/gallery.html
@@ -35,21 +35,15 @@
         <img src="../public/static/tiles/starters.webp" alt="tile" class="photo">
       </a>
     </div>
-    <div class="masonry-card">
+    <div class="masonry-card big">
       <a href="../public/static/tiles/tile_cake.jpg" data-fancybox="images">
         <img src="../public/static/tiles/tile_cake.jpg" alt="tile" class="photo">
       </a>
     </div>
 
     <div class="masonry-card">
-      <a href="../public/static/tiles/tile_steak_2.jpg" data-fancybox="images">
-        <img src="../public/static/tiles/tile_steak_2.jpg" alt="tile" class="photo">
-      </a>
-    </div>
-
-    <div class="masonry-card">
-      <a href="../public/static/tiles/tile_vip.jpeg" data-fancybox="images">
-        <img src="../public/static/tiles/tile_vip.jpeg" alt="tile" class="photo">
+      <a href="../public/static/tiles/tile_wine.jpg" data-fancybox="images">
+        <img src="../public/static/tiles/tile_wine.jpg" alt="tile" class="photo">
       </a>
     </div>
 
@@ -59,11 +53,24 @@
       </a>
     </div>
 
+    <div class="masonry-card small">
+      <a href="../public/static/tiles/tile_steak_2.jpg" data-fancybox="images">
+        <img src="../public/static/tiles/tile_steak_2.jpg" alt="tile" class="photo">
+      </a>
+    </div>
+
+    <div class="masonry-card small">
+      <a href="../public/static/tiles/tile_vip.jpeg" data-fancybox="images">
+        <img src="../public/static/tiles/tile_vip.jpeg" alt="tile" class="photo">
+      </a>
+    </div>
+
     <div class="masonry-card">
       <a href="../public/static/tiles/tile_wine.jpg" data-fancybox="images">
         <img src="../public/static/tiles/tile_wine.jpg" alt="tile" class="photo">
       </a>
     </div>
+
   </div>
 </div>
 
