my-container -> container

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <img class='wallpaper' src="public/static/top_wallpaper.jpg" alt="wallpaper">
 
   <header>
-    <div class="my-container">
+    <div class="container">
       <div class="left-bubble">
         <span class="logo">Приглашение</span>
         <h2>на празднование нашего бракосочетания!</h2>
@@ -31,7 +31,7 @@
     </div>
   </header>
 
-  <div class="my-container">
+  <div class="container">
     <div class="two-columns">
       <div class="hero">
         <h2>Где?</h2>
@@ -55,7 +55,7 @@
     </div>
   </div>
 
-  <div class="my-container hero">
+  <div class="container hero">
     <h2>Что вас ожидает?</h2>
     <div class="swiper">
       <div class="swiper-wrapper">
@@ -88,7 +88,7 @@
 </div>
 
 <div class="image_background">
-  <div class="my-container">
+  <div class="container">
     <div class="hero" align="center">
       <h2>Анкета гостя</h2>
       <form class="survey-form">
