--- a/web/gallery.html
+++ b/web/gallery.html
@@ -13,7 +13,7 @@
 <body>
 
 <header>
-  <div class="my-container">
+  <div class="container">
     <div class="left-bubble">
       <span class="logo">Галерея</span>
     </div>
@@ -27,7 +27,7 @@
   </div>
 </header>
 
-<div class="my-container">
+<div class="container">
   <div class="masonry">
 
     <div class="masonry-card">
