закомментировала ссылку на вишлист + отцентрировала филлер для мобильной версии

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
       <div class="right-bubble">
         <nav>
-          <ul><li><a href="web/wishlist.html">Вишлист подарков</a></li></ul>
+<!--          <ul><li><a href="web/wishlist.html">Вишлист подарков</a></li></ul>-->
           <ul><li><a href="web/gallery.html">Галерея</a></li></ul>
         </nav>
       </div>
