--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
           <span class="slide-label">Закуски</span>
         </div>
         <div class="swiper-slide">
+          <img src="public/static/tiles/podacha.jpeg" alt="tile">
+          <span class="slide-label">Яркие эмоции</span>
+        </div>
+        <div class="swiper-slide">
           <img src="public/static/tiles/tile_wine.jpg" alt="tile">
           <span class="slide-label">Вина Италии</span>
         </div>
