--- a/web/gallery.html
+++ b/web/gallery.html
@@ -71,6 +71,12 @@
       </a>
     </div>
 
+    <div class="masonry-card">
+      <a href="../public/static/gallery/video/test_video.mkv" data-fancybox="images" data-type="video">
+        <img src="../public/static/gallery/preview/test_preview.jpg" alt="tile" class="video">
+      </a>
+    </div>
+
   </div>
 </div>
 
